--- a/html/web.config
+++ b/html/web.config
@@ -1,20 +1,20 @@
 <httpProtocol>
-      <customHeaders>
-        <remove name="Expires"/>
-        <remove name="Host"/>
-        <remove name="P3P"/>
-        <add name="Strict-Transport-Security" value="max-age=31536000"/>
-        <add name="X-Content-Type-Options" value="nosniff" />
-        <add name="X-Frame-Options" value="SAMEORIGIN" />
-        <add name="Content-Security-Policy" value="default-src 'self'  'unsafe-inline';img-src 'self'  'unsafe-inline' data:;script-src 'self'  'unsafe-inline' 'unsafe-eval' " />
-        <add name="Referrer-Policy" value="origin"/>
-        <add name="Permissions-Policy" value="geolocation=(self)"/>
-        <remove name="Pragma"/>
-        <remove name="Public-Key-Pins"/>
-        <remove name="Public-Key-Pins-Report-Only"/>
-        <remove name="Via"/>
-        <remove name="X-Powered-By"/>
-        <remove name="X-Runtime"/>
-        <remove name="X-Version"/>
-      </customHeaders>
+    <customHeaders>
+      <remove name="Expires"/>
+      <remove name="Host"/>
+      <remove name="P3P"/>
+      <add name="Strict-Transport-Security" value="max-age=31536000"/>
+      <add name="X-Content-Type-Options" value="nosniff" />
+      <add name="X-Frame-Options" value="SAMEORIGIN" />
+      <add name="Content-Security-Policy" value="frame-src 'self' https:" />
+      <add name="Referrer-Policy" value="same-origin"/>
+      <add name="Permissions-Policy" value="geolocation=(self)"/>
+      <remove name="Pragma"/>
+      <remove name="Public-Key-Pins"/>
+      <remove name="Public-Key-Pins-Report-Only"/>
+      <remove name="Via"/>
+      <remove name="X-Powered-By"/>
+      <remove name="X-Runtime"/>
+      <remove name="X-Version"/>
+    </customHeaders>
 </httpProtocol>
